--- a/texuremapping/textureMapping.vcxproj
+++ b/texuremapping/textureMapping.vcxproj
@@ -30,6 +30,7 @@
     <ClCompile Include="src\texturemapping\import\intrinsicsImporter.cpp" />
     <ClCompile Include="src\texturemapping\import\mappingDataSetImporter.cpp" />
     <ClCompile Include="src\texturemapping\mapping\core\ray2.cpp" />
+    <ClCompile Include="src\texturemapping\mapping\core\ray3.cpp" />
     <ClCompile Include="src\texturemapping\mapping\core\undistorter.cpp" />
     <ClCompile Include="src\texturemapping\mapping\imageToModelProjector.cpp" />
     <ClCompile Include="src\texturemapping\mapping\meshCutter.cpp" />
@@ -63,6 +64,7 @@
     <ClInclude Include="src\texturemapping\mapping\core\mergingResult.h" />
     <ClInclude Include="src\texturemapping\mapping\core\projectionResult.h" />
     <ClInclude Include="src\texturemapping\mapping\core\ray2.h" />
+    <ClInclude Include="src\texturemapping\mapping\core\ray3.h" />
     <ClInclude Include="src\texturemapping\mapping\core\triangleReplacement.h" />
     <ClInclude Include="src\texturemapping\mapping\core\undistorter.h" />
     <ClInclude Include="src\texturemapping\mapping\core\vectorResult.h" />
