--- a/texuremapping/textureMapping.vcxproj
+++ b/texuremapping/textureMapping.vcxproj
@@ -22,7 +22,6 @@
     <ClCompile Include="src\texturemapping\calibratedCamera.cpp" />
     <ClCompile Include="src\texturemapping\core\log.cpp" />
     <ClCompile Include="src\texturemapping\core\mappingDataSet.cpp" />
-    <ClCompile Include="src\texturemapping\core\stbImage.cpp" />
     <ClCompile Include="src\texturemapping\core\terminalColor.cpp" />
     <ClCompile Include="src\texturemapping\hardwareacceleration\base\accelerator.cpp" />
     <ClCompile Include="src\texturemapping\hardwareacceleration\openCL\openCLAccelerator.cpp" />
@@ -42,14 +41,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="json\single_include\nlohmann\json.hpp" />
-    <ClInclude Include="mapping\core\projectionResult.h" />
     <ClInclude Include="src\texturemapping\calibratedCamera.h" />
     <ClInclude Include="src\texturemapping\core\color4.h" />
     <ClInclude Include="src\texturemapping\core\intrinsics.h" />
     <ClInclude Include="src\texturemapping\core\log.h" />
     <ClInclude Include="src\texturemapping\core\mappingDataSet.h" />
     <ClInclude Include="src\texturemapping\core\polygonMarker.h" />
-    <ClInclude Include="src\texturemapping\core\stbImage.h" />
     <ClInclude Include="src\texturemapping\core\terminalColor.h" />
     <ClInclude Include="src\texturemapping\hardwareacceleration\base\accelerator.h" />
     <ClInclude Include="src\texturemapping\hardwareacceleration\base\acceleratorTechnique.h" />
@@ -194,7 +191,7 @@
       <PrecompiledHeaderFile>
       </PrecompiledHeaderFile>
       <LanguageStandard>stdcpp20</LanguageStandard>
-      <AdditionalIncludeDirectories>D:\git\OpenGL-Renderengine-with-ImGui\vendor\json\include;D:\git\OpenGL-Renderengine-with-ImGui\vendor;D:\git\OpenGL-Renderengine-with-ImGui\engine\src;D:\git\OpenGL-Renderengine-with-ImGui\texuremapping\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>D:\git\OpenGL-Renderengine-with-ImGui\baseLib\src;D:\git\OpenGL-Renderengine-with-ImGui\vendor\json\include;D:\git\OpenGL-Renderengine-with-ImGui\vendor;D:\git\OpenGL-Renderengine-with-ImGui\engine\src;D:\git\OpenGL-Renderengine-with-ImGui\texuremapping\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>
