--- a/application/imgui.ini
+++ b/application/imgui.ini
@@ -1,18 +1,17 @@
 [Window][Debug##Default]
-ViewportPos=108,620
-ViewportId=0x9F5F46A1
+Pos=22,511
 Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1127,233
+ViewportPos=1779,322
 ViewportId=0xA4D966FE
 Size=550,423
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Settings]
-ViewportPos=1127,233
+ViewportPos=1779,322
 ViewportId=0xA4D966FE
 Pos=0,425
 Size=550,255
@@ -20,7 +19,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=1127,233 Size=550,680 Split=Y
+DockNode    ID=0x00000001 Pos=1779,322 Size=550,680 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=550,423 Selected=0xE87781F4
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=550,255 Selected=0x54723243
 
