--- a/application/imgui.ini
+++ b/application/imgui.ini
@@ -4,14 +4,14 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=-789,336
+ViewportPos=-531,-19
 ViewportId=0xA4D966FE
 Size=550,423
 Collapsed=0
 DockId=0x00000002,0
 
 [Window][Settings]
-ViewportPos=-789,336
+ViewportPos=-531,-19
 ViewportId=0xA4D966FE
 Pos=0,425
 Size=550,255
@@ -19,7 +19,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=-789,336 Size=550,680 Split=Y
+DockNode    ID=0x00000001 Pos=-531,-19 Size=550,680 Split=Y
   DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=550,423 Selected=0xE87781F4
   DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=550,255 Selected=0x54723243
 
