--- a/application/imgui.ini
+++ b/application/imgui.ini
@@ -4,22 +4,37 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-ViewportPos=-531,-19
+ViewportPos=1976,104
 ViewportId=0xA4D966FE
-Size=550,423
+Size=550,354
 Collapsed=0
-DockId=0x00000002,0
+DockId=0x00000004,0
 
 [Window][Settings]
-ViewportPos=-531,-19
+ViewportPos=1972,221
 ViewportId=0xA4D966FE
-Pos=0,425
-Size=550,255
+Pos=0,452
+Size=550,228
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][Example: Simple layout]
+Pos=520,163
+Size=500,440
+Collapsed=0
+
+[Window][Measurements]
+ViewportPos=1976,104
+ViewportId=0xA4D966FE
+Pos=0,356
+Size=550,324
+Collapsed=0
+DockId=0x00000005,0
+
 [Docking][Data]
-DockNode    ID=0x00000001 Pos=-531,-19 Size=550,680 Split=Y
-  DockNode  ID=0x00000002 Parent=0x00000001 SizeRef=550,423 Selected=0xE87781F4
-  DockNode  ID=0x00000003 Parent=0x00000001 SizeRef=550,255 Selected=0x54723243
+DockNode      ID=0x00000001 Pos=1976,104 Size=550,680 Split=Y
+  DockNode    ID=0x00000002 Parent=0x00000001 SizeRef=550,450 Split=Y Selected=0xE87781F4
+    DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=550,354 Selected=0xE87781F4
+    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=550,324 Selected=0xE95E5A71
+  DockNode    ID=0x00000003 Parent=0x00000001 SizeRef=550,228 Selected=0x54723243
 
